[gd_scene load_steps=15 format=2]

[ext_resource path="res://res/Gui/UiElements/Pop_up_Window.png" type="Texture" id=1]
[ext_resource path="res://ex/ico/mater/ico_m_xp.png" type="Texture" id=2]
[ext_resource path="res://tscn/base/baseDlg.tscn" type="PackedScene" id=3]
[ext_resource path="res://tscn/chara/hpBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://tscn/chara/anim.tscn" type="PackedScene" id=5]
[ext_resource path="res://tscn/charaDlg/charaDlg.gd" type="Script" id=6]
[ext_resource path="res://res/ying/ying.png" type="Texture" id=7]
[ext_resource path="res://res/Gui/UiElements/Login_window.png" type="Texture" id=8]
[ext_resource path="res://tscn/chara/popLv.tscn" type="PackedScene" id=9]
[ext_resource path="res://res/font/b.tres" type="DynamicFont" id=10]
[ext_resource path="res://tscn/charaDlg/buffsPan.tscn" type="PackedScene" id=11]
[ext_resource path="res://res/Gui/UiElements/HeroModel_Background_2.png" type="Texture" id=12]
[ext_resource path="res://res/Gui/MiniUiIcons/Icon_cancel.png" type="Texture" id=16]
[ext_resource path="res://res/Gui/MiniUiIcons/Icon_Cuirass.png" type="Texture" id=17]

[node name="charaDlg" instance=ExtResource( 3 )]
visible = true
margin_left = -477.0
margin_top = -181.0
margin_right = 470.0
margin_bottom = 162.0
script = ExtResource( 6 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="1"]
visible = false
margin_left = 205.0
margin_top = 41.0
margin_right = 432.0
margin_bottom = 245.0
texture = ExtResource( 12 )

[node name="c" type="Node2D" parent="." index="2"]
position = Vector2( 109, 147 )

[node name="body" type="Node2D" parent="c" index="0"]
position = Vector2( 0, -30 )

[node name="Ying" type="Sprite" parent="c/body" index="0"]
self_modulate = Color( 0, 0, 0, 0.780392 )
position = Vector2( -2, -2 )
scale = Vector2( 1, 0.546876 )
texture = ExtResource( 7 )

[node name="anim" parent="c/body" index="1" instance=ExtResource( 5 )]
frame = 3

[node name="popLv" parent="c" index="1" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_left = -85.0
margin_top = 78.5
margin_right = -68.0
margin_bottom = 90.5
rect_scale = Vector2( 1.5, 1.5 )

[node name="info" type="Control" parent="c" index="2"]
unique_name_in_owner = true
margin_left = -88.0
margin_top = 11.0
margin_right = 95.0
margin_bottom = 33.0
mouse_filter = 1

[node name="hpBar" parent="c/info" index="0" instance=ExtResource( 4 )]
position = Vector2( 95.5, 39 )
scale = Vector2( 4, 4 )

[node name="hp" type="Label" parent="c/info" index="1"]
margin_left = 3.0
margin_top = 26.0
margin_right = 43.0
margin_bottom = 48.0
text = "HP"

[node name="Label" type="Label" parent="c/info/hp" index="0"]
margin_left = 26.0
margin_right = 161.0
margin_bottom = 22.0
text = "100/100"
align = 1

[node name="xp" type="Label" parent="c/info" index="2"]
unique_name_in_owner = true
margin_left = 27.0
margin_top = 64.5
margin_right = 83.0
margin_bottom = 86.5
custom_colors/font_color = Color( 0.968627, 0.635294, 0.356863, 1 )
text = "60"
align = 2

[node name="btnLvUp" type="Button" parent="c/info/xp" index="0"]
unique_name_in_owner = true
visible = false
margin_left = 100.0
margin_top = -12.0
margin_right = 195.0
margin_bottom = 26.0
focus_mode = 0
text = "升级"
expand_icon = true

[node name="Sprite" type="Sprite" parent="c/info/xp" index="1"]
position = Vector2( 80, 10.4999 )
scale = Vector2( 0.28125, 0.269043 )
texture = ExtResource( 2 )

[node name="tab" type="Button" parent="c/info" index="3"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = -16.0
margin_right = 166.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.760784, 0.6, 0.317647, 1 )
custom_fonts/font = ExtResource( 10 )
text = "人类 战士"

[node name="btnBox" type="VBoxContainer" parent="c/info" index="4"]
margin_left = 134.0
margin_top = -104.0
margin_right = 219.0
margin_bottom = -24.0
alignment = 2

[node name="btnFire" type="Button" parent="c/info/btnBox" index="0"]
margin_top = 42.0
margin_right = 85.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.960784, 0.572549, 0.572549, 1 )
text = "解雇"
icon = ExtResource( 16 )
expand_icon = true

[node name="btnR" type="Button" parent="c/info/btnBox" index="1"]
visible = false
margin_top = 42.0
margin_right = 85.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.956863, 0.752941, 0.34902, 1 )
text = "复活"
align = 0
icon_align = 2
expand_icon = true

[node name="Sprite" type="Sprite" parent="c/info/btnBox/btnR" index="0"]
position = Vector2( 50, 19.5 )
scale = Vector2( 0.226562, 0.228516 )

[node name="Label" type="Label" parent="c/info/btnBox/btnR" index="1"]
margin_left = 22.0
margin_top = 12.0
margin_right = 60.0
margin_bottom = 34.0
text = "2"
align = 2

[node name="buffs" parent="c" index="3" instance=ExtResource( 11 )]

[node name="attK" type="ScrollContainer" parent="." index="3"]
margin_left = 247.0
margin_top = 43.0
margin_right = 423.0
margin_bottom = 324.0
scroll_horizontal_enabled = false

[node name="attBox" type="VBoxContainer" parent="attK" index="0"]
unique_name_in_owner = true

[node name="eqpK" type="NinePatchRect" parent="." index="4"]
margin_left = 9.0
margin_top = 247.0
margin_right = 246.0
margin_bottom = 334.0
texture = ExtResource( 1 )
patch_margin_left = 71
patch_margin_right = 85

[node name="Sprite" type="Sprite" parent="." index="5"]
visible = false
position = Vector2( 15, 290.5 )
scale = Vector2( 0.152344, 0.142578 )
texture = ExtResource( 17 )

[node name="eqpBox" type="GridContainer" parent="." index="6"]
margin_left = 27.0
margin_top = 260.0
margin_right = 224.0
margin_bottom = 323.0
columns = 5

[node name="skillK" type="NinePatchRect" parent="." index="7"]
margin_left = 423.0
margin_top = 40.0
margin_right = 939.0
margin_bottom = 328.0
texture = ExtResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="skillK" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 17.0
margin_right = -13.0
margin_bottom = -7.0

[node name="skillBox" type="VBoxContainer" parent="skillK/ScrollContainer" index="0"]
unique_name_in_owner = true

[node name="spLab" type="Label" parent="skillK" index="1"]
unique_name_in_owner = true
margin_left = 238.0
margin_top = -25.0
margin_right = 408.0
margin_bottom = -3.0
align = 1

[connection signal="pressed" from="c/info/xp/btnLvUp" to="." method="_on_btnLvUp_pressed"]
[connection signal="pressed" from="c/info/tab" to="." method="_on_tab_pressed"]
[connection signal="pressed" from="c/info/btnBox/btnFire" to="." method="_on_btnFire_pressed"]
[connection signal="pressed" from="c/info/btnBox/btnR" to="." method="_on_btnR_pressed"]
